5# video, 6# favicons, 7# text formatting

--- a/01_IntroductionToHTML/index.html
+++ b/01_IntroductionToHTML/index.html
@@ -1,5 +1,5 @@
 <!--wenn man "!!" eingibt, dann kommt direkt DOCTYPE bla
-wenn man nur ein "!" eingibt, dann kommt der Grundaufbau-->
+Wenn man nur ein "!" eingibt, dann kommt der Grundaufbau-->
 <!DOCTYPE html>
 <html>
     <head>
@@ -14,7 +14,7 @@ wenn man nur ein "!" eingibt, dann kommt der Grundaufbau-->
         <hr>
 
         <!--innerhalb des paragraph tags werden mehrere Leerzeichen und Zeilenumbrüche ignoriert
-        wenn man diese haben möchte, dann muss man das "pre" tag (für preformatted) verwenden-->
+        Wenn man diese haben möchte, dann muss man das "pre" tag (für preformatted) verwenden-->
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Rem suscipit esse ducimus repellat, unde labore?
@@ -25,7 +25,7 @@ wenn man nur ein "!" eingibt, dann kommt der Grundaufbau-->
         <br>
 
         <!--lorem + Tabulatortaste ergibt ein Beispieltext,
-        wenn man lorem200 + Enter eingibt, dann kommt der Beispieltext mit 200 Zeichen, kann man beliebig wählen-->
+        wenn man lorem200 + Enter eingibt, dann kommt der Beispieltext mit 200 Zeichen, Länge kann man beliebig wählen-->
         <pre>
 Lorem ipsum dolor sit amet consectetur adipisicing elit.
 Rem suscipit esse ducimus repellat, unde labore?
