--- a/02_hyperlinks/index.html
+++ b/02_hyperlinks/index.html
@@ -4,9 +4,9 @@
         <title>Test Website</title>
     </head>
     <body>
-        <!--hyperlink (hier ein bsp mit einem absolute URL) mit a tag (für anker), dieser öffnet sich im selben Fenster,
-        mit dem target Attribut öffnet man diesen Link (je nach Einstellung) in einem neuen Fenster oder Tab
-        weitere Attribute: title = zeigt einen Hinweis den man definiert hat beim Hovern über diesem Link-->
+        <!--hyperlink (hier ein bsp mit einem absolute URL) mit einem a tag (für anker), dieser öffnet sich im selben Fenster
+        Mit dem target Attribut öffnet man diesen Link (je nach Einstellung) in einem neuen Fenster oder Tab
+        Weitere Attribute: title = zeigt einen Hinweis den man definiert hat beim Hovern über diesem Link-->
         <a href="https://www.google.de"
         target="_blank"
         title="Goes to google">
