#8 span & div, #9 lists, #10 tables, #11 buttons

--- a/01_IntroductionToHTML/index.html
+++ b/01_IntroductionToHTML/index.html
@@ -1,3 +1,12 @@
+<!--Das ist ein Kommentar-->
+<!--bzw alles in diesem Bereich ist ein Kommentar,
+also auch Zeilenumbrüche
+
+oder Abstände oder was weiß ich für ein Inhalt möglich.
+Einzige Einschränkung ist, dass man nicht innerhalb der tags selbst oder
+von Attributen kommentieren kann-->
+
+
 <!--wenn man "!!" eingibt, dann kommt direkt DOCTYPE bla
 Wenn man nur ein "!" eingibt, dann kommt der Grundaufbau-->
 <!DOCTYPE html>
@@ -7,7 +16,7 @@ Wenn man nur ein "!" eingibt, dann kommt der Grundaufbau-->
     </head>
     <body>
         <!--je größer die Zahl desto kleiner die Überschrift-->
-        <h1>H1 Überschrift</h1>
+        <h1>H1 Überschrift</h1>>
         <h2>h2 Überschrift</h2>
 
         <!--für horizontale Trennlinie, ist ein self closing tag-->
