--- a/03_images/index.html
+++ b/03_images/index.html
@@ -15,6 +15,7 @@
         (zb wenn man falschen Dateinamen, Endung, Pfad usw geschrieben hat)
         Außerdem: Beim Screenreader wird dieser Text vorgelesen (=barrierefrei)
         -->
+        <!--moderner: style="height: 200px"-->
         <a href="https://de.wikipedia.org/wiki/Hauskatze">
             <img src="images/cat.jpg"
             alt="This is a picture of a cat"
