--- a/05_video/index.html
+++ b/05_video/index.html
@@ -9,7 +9,8 @@
 <body>
     <a href="https://de.wikipedia.org/wiki/Hasen">
         <!--<video src="video_1.mp4" width="500px" controls autoplay muted loop ></video>-->
-        <video controls autoplay muted loop>
+        <!--moderner wäre style="width: 500px"-->
+        <video width="500px" controls autoplay muted loop>
             <!--backup Videos so, mit mehreren Quellen-->
             <source src="video_1.mp4" type="video/mp4">
             <source src="video_2.flv" type="video/flv">
