--- a/06_favicon/index.html
+++ b/06_favicon/index.html
@@ -24,7 +24,9 @@
     <p>This is <tt>monospaced</tt> text</p>
     <p>This is <mark>highlighted</mark> text</p>
     <!--standardmäßig ist die Markerfarbe gelb, man kann aber mit CSS inline
-    in dem mark tag das Attribut "style" ergänzen und -->
+    in dem mark tag das Attribut "style" ergänzen, nach dem Gleichheitszeichen
+    folgt die Eigenschaft, danach von einem Doppelpunkt gefolgt kommt der Wert.
+    Alles innerhalb des Attributs style stehen in Anführungszeichen drin-->
     <p>This is <mark style="background-color:lightgreen">highlighted</mark> text</p>
 </body>
 </html>
