--- a/01_IntroductionToHTML/index.html
+++ b/01_IntroductionToHTML/index.html
@@ -16,7 +16,7 @@ Wenn man nur ein "!" eingibt, dann kommt der Grundaufbau-->
     </head>
     <body>
         <!--je größer die Zahl desto kleiner die Überschrift-->
-        <h1>H1 Überschrift</h1>>
+        <h1>H1 Überschrift</h1>
         <h2>h2 Überschrift</h2>
 
         <!--für horizontale Trennlinie, ist ein self closing tag-->
