refactor: clean up and modernize HTML tutorial code

--- a/01_Introduction_to_HTML/index.html
+++ b/01_Introduction_to_HTML/index.html
@@ -7,7 +7,7 @@ Einzige Einschränkung ist, dass man nicht innerhalb der tags selbst oder
 von Attributen kommentieren kann-->
 
 
-<!--wenn man "!!" eingibt, dann kommt direkt DOCTYPE bla
+<!--VS Code Shortcut: wenn man "!!" eingibt, dann kommt direkt DOCTYPE bla
 Wenn man nur ein "!" eingibt, dann kommt der Grundaufbau-->
 <!DOCTYPE html>
 <html>
@@ -15,7 +15,8 @@ Wenn man nur ein "!" eingibt, dann kommt der Grundaufbau-->
         <title>Test Website</title>
     </head>
     <body>
-        <!--je größer die Zahl desto kleiner die Überschrift-->
+        <!--je größer die Zahl desto kleiner die Überschrift, aber hier geht es weniger um die Größe,
+        da man den Style sowieso über CSS regelt, sondern eher um die Bedeutung/Relevanz, dass h1 die Hauptüberschrift ist usw usw-->
         <h1>H1 Überschrift</h1>
         <h2>h2 Überschrift</h2>
 
@@ -33,7 +34,7 @@ Wenn man nur ein "!" eingibt, dann kommt der Grundaufbau-->
         <!--br für Zeilenumbrüche, ebenfalls self closing tag-->
         <br>
 
-        <!--lorem + Tabulatortaste ergibt ein Beispieltext,
+        <!--VS Code Shortcut: lorem + Tabulatortaste ergibt ein Beispieltext,
         wenn man lorem200 + Enter eingibt, dann kommt der Beispieltext mit 200 Zeichen, Länge kann man beliebig wählen-->
         <pre>
 Lorem ipsum dolor sit amet consectetur adipisicing elit.
