--- a/05_video/index.html
+++ b/05_video/index.html
@@ -11,7 +11,8 @@
         <!--<video src="video_1.mp4" width="500px" controls autoplay muted loop ></video>-->
         <!--moderner wäre style="width: 500px"-->
         <video width="500px" controls autoplay muted loop>
-            <!--backup Videos so, mit mehreren Quellen-->
+            <!--backup Videos so, mit mehreren Quellen.
+            FLV und 3GP werden kaum noch benutzt, stattdessen gäbe es nach mp4 noch webm und ogg als Formate.-->
             <source src="video_1.mp4" type="video/mp4">
             <source src="video_2.flv" type="video/flv">
             <source src="video_3.3gp" type="video/3gp">
