--- a/13_headers_&_footers/index.html
+++ b/13_headers_&_footers/index.html
@@ -8,6 +8,8 @@
 <body>
     <header style="background-color: mediumpurple;">
         <h1>Welcome to Studibuch</h1>
+        <!--Navbar wird später behandelt wenn CSS behandelt wird,
+        daher hyperlinks, die führen aktuell nirgendwo hin, das dient jetzt nur zur Veranschaulichung.-->
         <a href="">Home</a>
         <a href="">About Us</a>
         <a href="">Products</a>
@@ -23,11 +25,12 @@
 
     <footer style="background-color: mediumpurple;">
         <hr>
-        author: Nadine Bauer<br>
+        author: Max Mustermann<br>
+        <!--Mit "&copy;" wird das Copyright Symbol angezeigt.-->
         &copy; copyright reserved<br>
-        <small><a href="mailto:nadine@studibuch.de">nadine@studibuch.de</a></small>
+        <!--Innerhalb der small tags kann man den Inhalt kleiner darstellen.-->
+        <small><a href="mailto:max@mustermann.de">max@mustermann.de</a></small>
     </footer>
 
-    <!--noch notizen schreiben-->
 </body>
 </html>
