--- a/06_favicon/index.html
+++ b/06_favicon/index.html
@@ -6,7 +6,10 @@
     <!--<meta http-equiv="X-UA-Compatible" content="IE=edge">-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--self closing link tag welches eine Verbindung zu einer externen Quelle,
-    hier das favicon mit dem Attribut icon, herstellt-->
+    hier das favicon mit dem Attribut icon, herstellt.
+    
+    Übrigens: png oder ico sind besser geeignet. Bei png ist Transparenz möglich,
+    bei ICO können mehrere Größen enthalten sein, Browser wählen dann automatisch die passende Größe.-->
     <!--sehe das favicon nur bei Chrome zb aber nicht bei Safari, why?-->
     <link rel="icon" type="image/jpg" href="images/favicon.jpg">
     <title>Studibuch</title>
